@@ -6,6 +6,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 .idea
+.DS_Store
 
 # User-specific stuff:
 .idea/**/workspace.xml
