@@ -27,3 +27,4 @@
   - Support propagate resource deletion policy.
   - Update Kubernetes Python Client to version 4.0.0
   - Add RBAC node type.
+  - Support checking statuses for Kubernetes resources.
